@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,76 +22,58 @@
  * or visit www.oracle.com if you need additional information or have any
  * questions.
  */
-package jdk.jfr.jvm;
+
+package jdk.jfr.event.runtime;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
 
 import jdk.internal.misc.Unsafe;
+import jdk.jfr.Recording;
 import jdk.jfr.consumer.RecordedEvent;
 import jdk.jfr.consumer.RecordingFile;
 import jdk.test.lib.Asserts;
+import jdk.test.lib.jfr.EventNames;
 import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.process.ProcessTools;
 
 /**
  * @test
  * @key jfr
- * @summary Verifies that data associated with a running recording can be evacuated to an hs_err_pidXXX.jfr when the VM crashes
  * @requires vm.hasJFR
- *
  * @library /test/lib
- * @modules java.base/jdk.internal.misc
- *          java.management
- *          jdk.jfr
+ * @modules java.base/jdk.internal.misc jdk.jfr
  *
- * @run main/othervm --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED jdk.jfr.jvm.TestDumpOnCrash
+ * @run main/othervm jdk.jfr.event.runtime.TestDumpReason
  */
-public class TestDumpOnCrash {
+public class TestDumpReason {
+    private final static int ATTEMPTS = 3;
+    private final static String EVENT_NAME = EventNames.DumpReason;
 
-    private static final int ATTEMPTS = 3;
-
-    static class CrasherIllegalAccess {
+    static class DumpCrash {
         public static void main(String[] args) {
-            Unsafe.getUnsafe().putInt(0L, 0);
-        }
-    }
-
-    static class CrasherHalt {
-        public static void main(String[] args) {
-            System.out.println("Running Runtime.getRuntime.halt");
-            Runtime.getRuntime().halt(17);
-        }
-    }
-
-    static class CrasherSig {
-        public static void main(String[] args) throws Exception {
-            String signalName = args[0];
-            System.out.println("Sending SIG" + signalName + " to process " + ProcessHandle.current().pid());
-            Runtime.getRuntime().exec("kill -" + signalName + " " + ProcessHandle.current().pid()).waitFor();
+            try (Recording r = new Recording()) {
+                r.enable(EVENT_NAME);
+                r.start();
+                Unsafe.getUnsafe().putInt(0L, 0);
+            }
         }
     }
 
     public static void main(String[] args) throws Exception {
-        test(CrasherIllegalAccess.class, "", true);
-        test(CrasherIllegalAccess.class, "", false);
-        test(CrasherHalt.class, "", true);
-        test(CrasherHalt.class, "", false);
-
-        // Test is excluded until 8219680 is fixed
-        // @ignore 8219680
-        // test(CrasherSig.class, "FPE", true);
+        test(DumpCrash.class, "Crash");
     }
 
-    private static void test(Class<?> crasher, String signal, boolean disk) throws Exception {
+    private static void test(Class<?> crasher, String reason) throws Exception {
         // The JVM may be in a state it can't recover from, so try three times
         // before concluding functionality is not working.
         for (int attempt = 0; attempt < ATTEMPTS; attempt++) {
             try {
-                verify(runProcess(crasher, signal, disk));
+                verify(runProcess(crasher), reason);
                 return;
             } catch (Exception e) {
                 System.out.println("Attempt " + attempt + ". Verification failed:");
@@ -107,17 +89,16 @@ public class TestDumpOnCrash {
         throw new Exception(ATTEMPTS + " attempts with failure!");
     }
 
-    private static long runProcess(Class<?> crasher, String signal, boolean disk) throws Exception {
-        System.out.println("Test case for crasher " + crasher.getName());
-        final String flightRecordingOptions = "dumponexit=true,disk=" + Boolean.toString(disk);
-        Process p = ProcessTools.createJavaProcessBuilder(true,
+    private static long runProcess(Class<?> crasher) throws Exception {
+        System.out.println("Test case for " + crasher.getName());
+        Process p = ProcessTools.createJavaProcessBuilder(
+                true,
                 "-Xmx64m",
                 "-XX:-CreateCoredumpOnCrash",
                 "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
-                "-XX:StartFlightRecording=" + flightRecordingOptions,
                 crasher.getName(),
-                signal)
-            .start();
+                ""
+                ).start();
 
         OutputAnalyzer output = new OutputAnalyzer(p);
         System.out.println("========== Crasher process output:");
@@ -127,18 +108,24 @@ public class TestDumpOnCrash {
         return p.pid();
     }
 
-    private static void verify(long pid) throws IOException {
+    private static void verify(long pid, String reason) throws Exception {
         String fileName = "hs_err_pid" + pid + ".jfr";
         Path file = Paths.get(fileName).toAbsolutePath().normalize();
+        try {
+            Asserts.assertTrue(Files.exists(file), "No emergency jfr recording file " + file + " exists");
+            Asserts.assertNotEquals(Files.size(file), 0L, "File length 0. Should at least be some bytes");
+            System.out.printf("File size=%d%n", Files.size(file));
 
-        Asserts.assertTrue(Files.exists(file), "No emergency jfr recording file " + file + " exists");
-        Asserts.assertNotEquals(Files.size(file), 0L, "File length 0. Should at least be some bytes");
-        System.out.printf("File size=%d%n", Files.size(file));
-
-        List<RecordedEvent> events = RecordingFile.readAllEvents(file);
-        Asserts.assertFalse(events.isEmpty(), "No event found");
-        System.out.printf("Found event %s%n", events.get(0).getEventType().getName());
-
-        Files.delete(file);
+            List<RecordedEvent> events = RecordingFile.readAllEvents(file);
+            System.out.println(events);
+            Asserts.assertTrue(events.size() == 1, "Expected one event");
+            RecordedEvent e = events.get(0);
+            if (reason.equals(e.getString("reason"))) {
+                return;
+            }
+            throw new Exception("Could not find vaild DumpReason event");
+        } finally {
+            Files.delete(file);
+        }
     }
 }
